Added swagger generated network classes
